fix overflow mobile 2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,10 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   overflow-x: hidden;
+  max-width: 100vw;
 }
